--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src",
-    "paths": {
-      "*": ["public/src/*"]
-    }
+    "baseUrl": "src"
   },
   "include": ["./src"]
 }
