--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "duel-game-splitscreen",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://larkiz.github.io/duel-game-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,8 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "rm -rf build && npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
